# multiclass-classification-transfromer-model-comparison

./: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
config/: config.yaml
data/: README.md
notebooks/: bert_base_uncased_hate_offensive_normal_speech.ipynb  bert_large_uncased_hate_offensive_normal_speech.ipynb  distilbert_base_uncased_uncased_hate_offensive_normal_speech.ipynb  fBERT_hate_offensive_normal_speech.ipynb  hateBERT_hate_offensive_normal_speech.ipynb  roberta_large_hate_offensive_normal_speech.ipynb
scripts/: make_figures.py  prepare_dataset.py
src/hate_speech_eval/: __init__.py  aggregate_metrics.py  config.py  data.py  evaluate.py  metrics.py  train.py  trainer.py  viz.py  viz_curves.py
